--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
   </main>
 
   <footer class="text-center text-sm text-gray-500 py-6">
-    © 2025 CmdSharp. All rights reserved.
+    © 2025 CmdSharp · 
+    <a href="/privacy.html" class="underline">Privacy Policy</a> · 
+    <a href="/terms.html" class="underline">Terms & Conditions</a>
   </footer>
 </body>
 </html>
