Add CmdSharp landing page

--- a/terms.html
+++ b/terms.html
@@ -28,7 +28,7 @@
   <p class="mb-4">We reserve the right to suspend or terminate access to CmdSharp for any violation of these Terms or misuse of the service.</p>
 
   <h2 class="text-xl font-semibold mt-8 mb-2">6. Contact</h2>
-  <p class="mb-4">For questions, please contact us at <a class="text-blue-600 underline" href="mailto:support@cmdsharp.com">support@cmdsharp.com</a>.</p>
+  <p class="mb-4">For questions, please contact us at <a class="text-blue-600 underline" href="mailto:support@proviska.com">support@proviska.com</a>.</p>
 
   <footer class="mt-12 text-sm text-gray-500">
     © 2025 CmdSharp. All rights reserved.
