--- a/privacy.html
+++ b/privacy.html
@@ -33,7 +33,7 @@
   <p class="mb-4">We only retain information as long as necessary to provide the service or comply with legal obligations. You can request data deletion at any time by emailing us.</p>
 
   <h2 class="text-xl font-semibold mt-8 mb-2">5. Contact</h2>
-  <p>If you have questions or requests regarding your data, please contact us at <a class="text-blue-600 underline" href="mailto:support@cmdsharp.com">support@cmdsharp.com</a>.</p>
+  <p>If you have questions or requests regarding your data, please contact us at <a class="text-blue-600 underline" href="mailto:support@proviska.com">support@proviska.com</a>.</p>
 
   <footer class="mt-12 text-sm text-gray-500">
     © 2025 CmdSharp. All rights reserved.
