--- a/index.html
+++ b/index.html
@@ -4,47 +4,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CmdSharp – Invoice at the speed of thought</title>
+  <title>CmdSharp – Command Your Invoicing</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800">
   <header class="text-center py-12 bg-[#2C3E4C] text-white">
     <h1 class="text-4xl font-bold mb-2">CmdSharp</h1>
-    <p class="text-xl">Invoice at the speed of thought</p>
+    <p class="text-xl">Command your invoicing. Invoice at the speed of thought.</p>
   </header>
 
   <main class="px-6 py-12 max-w-4xl mx-auto">
     <section class="text-center mb-10">
-      <h2 class="text-2xl font-semibold mb-4">Create professional invoices in seconds</h2>
+      <h2 class="text-2xl font-semibold mb-4">Finally, invoicing as fast as you can think</h2>
       <p class="text-lg text-gray-700">
         Revolutionary command shortcuts, voice recognition, and AI intelligence.<br />
-        <strong>The fastest invoicing system ever built.</strong>
+        <strong>Type it, speak it, or slash it — and CmdSharp does the rest.</strong>
       </p>
     </section>
 
     <section class="grid grid-cols-1 sm:grid-cols-2 gap-6 text-center mb-12">
       <div class="border p-6 rounded shadow hover:shadow-md transition">
         <h3 class="text-lg font-semibold mb-2">🎙️ Voice to Invoice</h3>
-        <p>Speak your invoice and let CmdSharp do the rest.</p>
+        <p>Speak naturally and CmdSharp creates a complete invoice with client, service, amount, and due date.</p>
       </div>
       <div class="border p-6 rounded shadow hover:shadow-md transition">
-        <h3 class="text-lg font-semibold mb-2">⌨️ Command Input</h3>
-        <p>Use clean text commands like <code>@john $500 #web_design</code>.</p>
+        <h3 class="text-lg font-semibold mb-2">⌨️ Slash-Command Input</h3>
+        <p>Use shortcut magic like <code>I @john #web $500 /30</code> to instantly generate professional PDFs.</p>
       </div>
       <div class="border p-6 rounded shadow hover:shadow-md transition">
         <h3 class="text-lg font-semibold mb-2">🧾 Instant PDF</h3>
-        <p>Generate a professional invoice in seconds, no clicks needed.</p>
+        <p>Beautiful, branded PDF invoices generated in seconds — no clicking through endless forms.</p>
       </div>
       <div class="border p-6 rounded shadow hover:shadow-md transition">
-        <h3 class="text-lg font-semibold mb-2">🤖 AI Assistance</h3>
-        <p>Smart autocomplete and AI-powered suggestions built-in.</p>
+        <h3 class="text-lg font-semibold mb-2">📊 Business Intelligence</h3>
+        <p>Track revenue, customer history, and invoice performance in your Command Center dashboard.</p>
       </div>
     </section>
 
     <div class="text-center">
       <a href="https://appsumo.com/products/cmdsharp" class="inline-block bg-[#2C3E4C] text-white text-lg font-semibold px-6 py-3 rounded hover:bg-[#1e2c3a] transition">
-        🚀 Available Now on AppSumo
+        🚀 Get Lifetime Access for $49 on AppSumo
       </a>
+      <p class="mt-2 text-sm text-gray-600">One-time purchase. No subscriptions. 60-day refund guarantee.</p>
     </div>
   </main>
 
