--- a/index.html
+++ b/index.html
@@ -837,29 +837,8 @@
             document.getElementById('btn-loading').style.display = 'inline';
             
             try {
-                // Create checkout session
-                const response = await fetch('https://ai.proviska.com/api/create-checkout.php', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        country: userLocation.country,
-                        currency: userLocation.currency,
-                        product: 'cmdsharp-lifetime',
-                        success_url: 'https://cmdsharp.com/success.html',
-                        cancel_url: 'https://cmdsharp.com/cancel.html'
-                    })
-                });
-
-                const data = await response.json();
-                
-                if (data.success && data.checkout_url) {
-                    // Redirect to checkout
-                    window.location.href = data.checkout_url;
-                } else {
-                    throw new Error(data.message || 'Failed to create checkout session');
-                }
+                // Redirect to checkout page to collect customer info
+                window.location.href = 'https://checkout.cmdsharp.com/';
             } catch (error) {
                 console.error('Checkout error:', error);
                 alert('Sorry, there was an error processing your request. Please try again.');
