--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 
         .video-wrapper iframe {
             width: 100%;
-            height: 315px;
+            height: 400px;
             border-radius: 15px;
             border: none;
         }
@@ -546,7 +546,7 @@
             }
             
             .video-wrapper iframe {
-                height: 250px;
+                height: 300px;
             }
         }
 
@@ -815,10 +815,11 @@
         <div class="video-container fade-in">
             <div class="video-wrapper">
                 <iframe 
-                    src="https://www.youtube.com/watch?v=WhE_pvnJUEE" 
+                    src="https://www.youtube.com/embed/WhE_pvnJUEE?rel=0&modestbranding=1" 
                     frameborder="0" 
                     allowfullscreen 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
                     title="CmdSharp Demo Video">
                 </iframe>
             </div>
