--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
         <div class="video-container fade-in">
             <div class="video-wrapper">
                 <iframe 
-                    src="https://www.youtube.com/embed/WhE_pvnJUEE?rel=0&modestbranding=1" 
+                    src="https://www.youtube.com/embed/EkAtF26VH-Y?rel=0&modestbranding=1" 
                     frameborder="0" 
                     allowfullscreen 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
