--- a/index.html
+++ b/index.html
@@ -713,6 +713,15 @@
         }
 
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MD1Q5HKDQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-7MD1Q5HKDQ');
+    </script>
 </head>
 <body>
     <div class="bg-animated"></div>
