--- a/index.html
+++ b/index.html
@@ -1027,10 +1027,10 @@
                 <li>All future updates included</li>
             </ul>
             
-            <!-- <button class="btn btn-primary" id="get-license-btn" onclick="initiatePurchase()" style="width: 100%; margin-top: 1rem;">
+            <button class="btn btn-primary" id="get-license-btn" onclick="initiatePurchase()" style="width: 100%; margin-top: 1rem;">
                 <span id="btn-text">Get Lifetime Access</span>
                 <span id="btn-loading" style="display: none;">🌍 Detecting location...</span>
-            </button> -->
+            </button>
             
             <p id="location-info" style="font-size: 0.9rem; margin-top: 1rem; color: var(--text-muted); display: none;">
                 <span id="location-text"></span>
