--- a/index.html
+++ b/index.html
@@ -738,7 +738,11 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
-                <li><a href="#demo">Demo</a></li>
+                <li>
+                    <a style="color: black;" href="https://ai.proviska.com/api/demo-download.php" class="btn btn-primary">
+                        Download Demo APK
+                    </a>
+                </li>
                 <li><a href="#documentation">Documentation</a></li>
                 <li><a href="#pricing">Pricing</a></li>
             </ul>
