--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
             </ul>
             <div class="demo-download-btn">
                 <a href="https://ai.proviska.com/api/demo-download.php" class="btn btn-primary">
-                    📱 Demo APK
+                    Demo APK
                 </a>
             </div>
         </nav>
