--- a/index.html
+++ b/index.html
@@ -739,6 +739,7 @@
         }
 
     </style>
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MD1Q5HKDQ"></script>
     <script>
