--- a/index.html
+++ b/index.html
@@ -770,13 +770,13 @@
                 <li><a href="#pricing">Pricing</a></li>
                 <li>
                     <a href="https://ai.proviska.com/api/demo-download.php" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
-                        Demo APK
+                        Trial APK
                     </a>
                 </li>
             </ul>
             <div class="demo-download-btn">
                 <a href="https://ai.proviska.com/api/demo-download.php" class="btn btn-primary">
-                    Demo APK
+                    Trial APK
                 </a>
             </div>
         </nav>
@@ -804,12 +804,7 @@
                 <a href="#pricing" class="btn btn-primary">Get Started Now</a>
                 <a href="#features" class="btn btn-secondary">See Features</a>
             </div>
-            
-            <div class="product-hunt-badge" style="margin-top: 2rem; text-align: center;">
-                <a href="https://www.producthunt.com/products/cmdsharp?embed=true&utm_source=badge-featured&utm_medium=badge&utm_source=badge-cmdsharp" target="_blank">
-                    <img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=998525&theme=neutral&t=1753694061283" alt="CmdSharp - Speak&#0044;&#0032;Type&#0044;&#0032;Command&#0032;your&#0032;invoicing | Product Hunt" style="width: 250px; height: 54px; transition: transform 0.3s ease;" width="250" height="54" />
-                </a>
-            </div>
+
         </div>
     </section>
 
