--- a/index.html
+++ b/index.html
@@ -770,13 +770,13 @@
                 <li><a href="#pricing">Pricing</a></li>
                 <li>
                     <a href="https://ai.proviska.com/api/demo-download.php" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
-                        Trial APK
+                        Download
                     </a>
                 </li>
             </ul>
             <div class="demo-download-btn">
                 <a href="https://ai.proviska.com/api/demo-download.php" class="btn btn-primary">
-                    Trial APK
+                    Download
                 </a>
             </div>
         </nav>
@@ -1156,9 +1156,13 @@
 
         // Dynamic command demo
         const commands = [
+            'Invoice John for Plumbing Repairs 50 dollars',
+            'Invoice Peter Parker for Web Design 150 dollars',                
             'Q @ABC_company #consulting $150 em:jane@abc.com',
             'I @tech_company #website $300 due:30',
+            'Quote Jane for electrical repairs 25 dollars',
             'I @john_smith #app $2500 notes:urgent',
+            'Quote Joe Soap for logo design 35 dollars',
             'I @peter_smith #logo $250 + #flyers $20',
         ];
 
