--- a/index.html
+++ b/index.html
@@ -769,13 +769,13 @@
                 <li><a href="#documentation">Documentation</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li>
-                    <a href="https://ai.proviska.com/api/demo-download.php" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
+                    <a href="https://ai.proviska.com/demo/" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
                         Download
                     </a>
                 </li>
             </ul>
             <div class="demo-download-btn">
-                <a href="https://ai.proviska.com/api/demo-download.php" class="btn btn-primary">
+                <a href="https://ai.proviska.com/demo/" class="btn btn-primary">
                     Download
                 </a>
             </div>
