--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@
                 <li><a href="#pricing">Pricing</a></li>
                 <li>
                     <a href="https://ai.proviska.com/demo/" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
-                        Download
+                        Try Free
                     </a>
                 </li>
             </ul>
@@ -1107,7 +1107,7 @@
     <section class="hero">
         <div class="hero-content">
             <!-- <div class="hero-badge">🚀 Revolutionary AI Invoicing</div> -->
-            <h1>CmdSharp - Command Your Invoicing</h1>
+            <h1>cmdsharp - command your invoicing</h1>
             <p class="hero-subtitle">
                 Create professional invoices in 6-11 seconds with voice commands and intelligent shortcuts. 
                 The future of business automation is here.
