--- a/index.html
+++ b/index.html
@@ -1192,13 +1192,13 @@
                 <li><a href="#gallery">Screenshots</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li>
-                    <a href="https://ai.proviska.com/demo/" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
+                    <a href="download.html" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
                         Try Free
                     </a>
                 </li>
             </ul>
             <div class="demo-download-btn">
-                <a href="https://ai.proviska.com/demo/" class="btn btn-primary">
+                <a href="download.html" class="btn btn-primary">
                     Try Free
                 </a>
             </div>
