--- a/download.html
+++ b/download.html
@@ -437,6 +437,14 @@
             }
         }
     </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MD1Q5HKDQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-7MD1Q5HKDQ');
+    </script>
 </head>
 <body>
     <div class="bg-animated"></div>
