--- a/index.html
+++ b/index.html
@@ -1172,15 +1172,15 @@
                     <a href="https://www.facebook.com/profile.php?id=61579102259211" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
                         <img src="images/social/Facebook_Logo_Primary.png" alt="Facebook" height="24">
                     </a>
-                    <a href="https://www.instagram.com/cmdstack/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+                    <!-- <a href="https://www.instagram.com/cmdstack/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
                         <img src="images/social/Instagram_Glyph_White.png" alt="Instagram" height="24">
-                    </a>
+                    </a> -->
                     <a href="https://x.com/cmdsharp" target="_blank" rel="noopener noreferrer" aria-label="X (Twitter)">
                         <img src="images/social/logo-white.png" alt="X" height="24">
                     </a>
-                    <a href="https://tiktok.com/@cmdstack" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
+                    <!-- <a href="https://tiktok.com/@cmdstack" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
                         <img src="images/social/TikTok_Icon_Black_Circle.png" alt="TikTok" height="24">
-                    </a>
+                    </a> -->
                     <a href="https://www.linkedin.com/in/wouterolwagen/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
                         <img src="images/social/InBug-White.png" alt="LinkedIn" height="24">
                     </a>
