--- a/download.html
+++ b/download.html
@@ -503,9 +503,9 @@
                         <button onclick="downloadApp()" class="btn btn-primary" id="download-btn">
                             📱 Download CmdSharp Now
                         </button>
-                        <a href="index.html#how-it-works" class="btn btn-secondary">
+                        <!-- <a href="index.html#how-it-works" class="btn btn-secondary">
                             Watch Demo First →
-                        </a>
+                        </a> -->
                     </div>
 
                     <div class="steps-container">
